# site_smartspend_v2

./: .env.example  .gitignore  DATABASE.md  DOCUMENTATION.md  PAGES.md  PAGES_SPEC.md  PRODUCT_SPEC.md  README.md  USECASES.csv  USECASES.md  account.html  alembic.ini  article.html  catalog.html  create-article.html  create-set.html  feed.html  index.html  inventory.html  profile.html  pyproject.toml  set-detail.html  settings.html  smartspend-account.html  smartspend-catalog.html  smartspend-feed.html  smartspend-inventory.html  smartspend-profile-v6 (1).html  smartspend-quiz-modal.html  smartspend-setting.html
.claude/: settings.json  settings.local.json
app/: index.html  package-lock.json  package.json
app/src/: App.jsx  index.css  main.jsx
assets/: index-CXOYc0nc.js  index-fQi_05-7.css
assets/css/: base.css  sidebar.css
assets/js/: auth.js  sidebar-component.js  sidebar.js  theme.js  toast.js
data/: articles.json  catalog.json  feed.json  inventory.json  sets.json  user.json
migrations/: env.py
raw_sample_page/: Mobile_version.html  cube_quize.html  landing.html  landingpageeconom.html  landingpagefuture.html  landingpagegedonist.html  landingpagegiberbol.html  landingpageinventar.html  landingpageknown.html  landingpagemental.html  landingpageplan.html  landingpageslide1.html  landingpageslide2.html  smartspend-article.html  smartspend-create_article.html  smartspend-landing.html  smartspend-logo (1).html  smartspend-set-detail.html  smartspend_createset.html  smartspend_disco_cube.html  smartspend_feed_end_v2.html
src/app/: main.py
(+49 files in other folders)
